--- a/04-board/styles.css
+++ b/04-board/styles.css
@@ -5,9 +5,162 @@
 body {
   background-color: #111;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   height: 100vh;
-  overflow: hidden;
+  overflow: auto;
   margin: 0;
+}
+
+.description {
+  padding: 15px;
+  width: 100%;
+  font-size: 18px;
+  text-align: center;
+  color: #fff;
+  font-weight: bold;
+}
+
+.start-game {
+  margin-top: 2rem;
+  padding: 10px;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.start-game:hover {
+  background-color: #111;
+  color: #fff;
+}
+
+.game-wrapper {
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.game-over {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.1);
+  display: none;
+}
+
+.container {
+  width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  background-color: #111;
+  border: 1px solid aliceblue;
+}
+
+.task {
+  margin: 0 auto;
+  width: 15rem;
+  height: 25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 10px;
+}
+
+.task-word {
+  display: block;
+  padding: 10px;
+  font-size: 2rem;
+}
+
+.square {
+  margin: 1px;
+  width: 16px;
+  height: 16px;
+  background-color: #1d1d1d;
+  box-shadow: 0 0 2px #000;
+  border-radius: 50%;
+}
+
+.square:hover {
+  transition-duration: 0s;
+}
+
+.task-wrapper {
+  width: 50%;
+}
+
+.board-wrapper {
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.palette {
+  height: 15rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.palette h3 {
+  margin: 0;
+  padding: 0;
+  font-size: 1.7rem;
+  color: #fff;
+  text-align: center;
+}
+
+.palette button {
+  padding: 5px;
+  width: 120px;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.palette button.purple:hover {
+  background-color: purple;
+  color: #fff;
+}
+
+.palette button.orange:hover {
+  background-color: orange;
+  color: #fff;
+}
+
+.palette button.green:hover {
+  background-color: green;
+  color: #fff;
+}
+
+.palette button.blue:hover {
+  background-color: blue;
+  color: #fff;
+}
+
+.timer {
+  padding: 10px;
+  width: 120px;
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+  color: #fff;
+  background-color: #474343;
+}
+
+.timer > * {
+  margin-right: 5px;
 }
