--- a/04-board/styles.css
+++ b/04-board/styles.css
@@ -45,24 +45,12 @@ body {
   justify-content: space-around;
 }
 
-.game-over {
-  width: 100%;
-  height: 100vh;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.1);
-  display: none;
-}
-
 .container {
-  width: 400px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   background-color: #111;
-  border: 1px solid aliceblue;
 }
 
 .task {
@@ -104,6 +92,12 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+#board {
+  width: 50%;
+  height: 50vh;
+  border: 1px solid aliceblue;
 }
 
 .palette {
